# hackathon-uipath

./: .gitignore  LICENSE  README.md  run.bat  run.ps1
system/: .gitignore  pyproject.toml
system/_internal/contracts/: handoff.schema.json  isolation-addon.schema.json  post-apply-verification.schema.json  pre-simulation-package.schema.json  simulation-result.schema.json  user-decision.schema.json  workflow-state.schema.json
system/_internal/proof/: audisor-event-log.json  execution_trace_0af4414a.json  execution_trace_1c8a67a1.json  execution_trace_2296a636.json  execution_trace_244b441b.json  execution_trace_25a04bb1.json  execution_trace_26bb690f.json  execution_trace_2901cf95.json  execution_trace_43801595.json  execution_trace_4416bdde.json  execution_trace_489e7cc9.json  execution_trace_5afac1cc.json  execution_trace_635b98ec.json  execution_trace_6e801fd5.json  execution_trace_7bff0309.json  execution_trace_8c22a1da.json  execution_trace_8ecf4217.json  execution_trace_bd3cb939.json  execution_trace_c0b9b99d.json  execution_trace_c3513b83.json  execution_trace_cdd6eb0a.json  execution_trace_cfe35aee.json  execution_trace_d633cbe4.json  execution_trace_f86d70d8.json
system/_internal/proof-latest/: execution_trace_4454714f.json
system/_internal/tests/: _support.py  test_dependency_rules.py  test_handoff_rules.py
system/cases/template/: case-input.template.json  mapping.template.json
system/docs/: API_SPECIFICATION.md  ARCHITECTURE-WORKBENCH.md  DEMO_GUIDE.md  README-workbench.md  architecture.md  bind-real-case.md  dependency-policy.md  handoff-state.md  run-demo.md  run-guide.md  setup-guide.md
system/docs/diagrams/: workflow.mmd
system/docs/reports/: edge_scan_report.html  pipeline-report.html
system/pipeline/: .gitignore  __init__.py  _run_e2e.py  deploy.py  execution_trace.py  inspection.py  isolation_engine.py  main.py  models.py  orchestrator.py  phase_0.py  phase_1.py  phase_2.py  phase_3.py  phase_4.py  phase_5.py  phases.py  pipeline_output.json  pipeline_state.py  project.uiproj  pyproject.toml  relay.py  resolution_report.py  resolution_report_html.py  scanner.py  utils.py
system/pipeline/agent_definitions/: presimulation_evaluator.json
system/scripts/: audit-fix.ps1  debug-demo.ps1  nextflow_demo.py  pack.ps1  verify-package.ps1
system/submission/: DEPLOYMENT-READINESS.md  NextFlow_AgentHack_Deck.pptx  SUBMISSION.md  cloud-evidence.md  deck-content.md  demo-script.md  devpost-draft.md  judging-evidence.md
uipath/coding-agent/: entry-points.json  main.py  project.uiproj  pyproject.toml
(+290 files in other folders)
