# Modified: 2025-06-29T12:00:00Z
[project]
name = "pipeline.edge"
version = "1.0.0"
description = "Edge pipeline — 7-phase execution chain. Author: The One Shot"
requires-python = ">=3.11,<4"
authors = [
  { name = "The One Shot", email = "team@example.invalid" }
]
dependencies = [
  "pydantic>=2.12.5,<3",
  "uipath==2.11.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflow_control"]
