# Modified: 2026-06-24T07:30:00Z
[project]
name = "audisor-coding-agent"
version = "1.0.0"
description = "Audisor Coding Agent — Claude Code wrapper invoked through UiPath"
requires-python = ">=3.11,<4"
authors = [
  { name = "Hackathon Team", email = "team@example.invalid" }
]
dependencies = [
  "uipath==2.11.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coding_agent"]